{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "712fa101-5344-40d1-bbfc-5d7b7b105e32",
            "actions": [
                {
                    "name": "MoveInput",
                    "type": "Value",
                    "id": "fc5253d9-8df2-448f-9f9d-58a3e56d6ff8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpInput",
                    "type": "Button",
                    "id": "641cc769-ea6f-4f1a-8738-67caba5633d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackInput",
                    "type": "Button",
                    "id": "d8b6f1f2-a260-4e30-b497-5fef660fffa4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashInput",
                    "type": "Button",
                    "id": "bd196f66-6f8f-4b0a-beb2-c5ad28ec37f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cce7840e-d286-464f-ac3f-e727171dd0c8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13617f4e-bf9f-4014-8ad2-61d67f3e85a9",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3958b6dc-cdba-4a07-9812-1908c5ed0751",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfcca61f-8cc1-4951-8ae9-2341b94809c6",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfcf24e8-f1f9-4ac6-ad46-47c29e3395ed",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "AttackInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd3f9ad3-96a7-4a1f-ac54-54df913ac45b",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}